// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generated Logs > 1 match on no description 1`] = `
"
docs : Update documentation
    ↑
    ┆
    ╵--- Unexpected character between commit type and colon.

"
`;

exports[`Generated Logs > 2 match on no description 1`] = `
"
docs(): 
     ↑ ↑
     ┆ ┆
     ┆ ╵--- Missing or empty commit description.
     ┆
     ╵--- Empty commit scope provided.

"
`;

exports[`Generated Logs > 3 match on no description 1`] = `
"
docs() : 
     ↑↑ ↑
     ┆┆ ┆
     ┆┆ ╵--- Missing or empty commit description.
     ┆┆
     ┆╵--- Unexpected character before the colon in the commit message.
     ┆
     ╵--- Empty commit scope provided.

"
`;

exports[`Generated Logs > 4 match on no description 1`] = `
"
docs () : 
    ↑ ↑↑ ↑
    ┆ ┆┆ ┆
    ┆ ┆┆ ╵--- Missing or empty commit description.
    ┆ ┆┆
    ┆ ┆╵--- Unexpected character before the colon in the commit message.
    ┆ ┆
    ┆ ╵--- Empty commit scope provided.
    ┆
    ╵--- Unexpected character between commit type and scope.

"
`;

exports[`Generated Logs > 5 match on no description 1`] = `
"
docs () :
    ↑ ↑↑ ↑
    ┆ ┆┆ ┆
    ┆ ┆┆ ┆--- Missing or empty commit description.
    ┆ ┆┆ ┆
    ┆ ┆┆ ╵--- Space after the colon is required.
    ┆ ┆┆
    ┆ ┆╵--- Unexpected character before the colon in the commit message.
    ┆ ┆
    ┆ ╵--- Empty commit scope provided.
    ┆
    ╵--- Unexpected character between commit type and scope.

"
`;

exports[`Generated Logs > colon missing 1`] = `
"
Update documentation
                    ↑
                    ┆
                    ╵--- Colon is missing in the commit message structure.

"
`;

exports[`Generated Logs > space before 1`] = `
"
 docs: Update documentation
↑
┆
╵--- Avoid leading or trailing spaces in the commit message.

"
`;

exports[`Generated Logs > space before 2`] = `
"
 docs:
↑
┆
╵--- Avoid leading or trailing spaces in the commit message.

"
`;
